--- a/options.html
+++ b/options.html
@@ -5,11 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Setup your Name</title>
+    <title>Setup your Options</title>
 </head>
 <body>
-    <h2>Please Enter your Name</h2>
+    <h2>Please Enter your Name And Where To Reply</h2>
     <input type="text" id="agentName" value="">
+    <select name="whereToFill" id="whereToFill">
+        <option value="replyToCaptain">Reply To Captain</option>
+        <option value="publicReply">Public Reply</option>
+    </select>
     <input type="submit" value="Save">
     <script src="options.js"></script>
 </body>
