--- a/popup.html
+++ b/popup.html
@@ -17,22 +17,24 @@
                 {{cat.replace(/_/g, " ")[0].toUpperCase() + cat.replace(/_/g, " ").slice(1)}}
             </div>
 
-            <div class="container" v-if="showSubCategory">
-                <div class="col-xs-12 category"
-                     v-for="(issues , sub) in categories[selectedCat]"
-                     @click="showIssuesMethod(sub)">
-                    {{sub}}
+            <transition name="slide-fade">
+                <div class="container" v-if="showSubCategory">
+                    <div class="col-xs-12 category"
+                         v-for="(issues , sub) in categories[selectedCat]"
+                         @click="showIssuesMethod(sub)">
+                        {{sub.replace(/_/g, " ")[0].toUpperCase() + sub.replace(/_/g, " ").slice(1)}}
+                    </div>
+                </div>    
+            </transition>
+            <transition name="slide-fade">
+                <div class="container" v-if="showIssues">
+                    <div class="col-xs-12 category"
+                        v-for="issue in categories[selectedCat][selectedSubCat]"
+                        @click="selectAnIssue(issue)">
+                        {{issue.replace(/_/g, " ")[0].toUpperCase() + issue.replace(/_/g, " ").slice(1)}}
+                    </div>
                 </div>
-            </div>
-
-            <div class="container" v-if="showIssues">
-                <div class="col-xs-12 category"
-                     v-for="issue in categories[selectedCat][selectedSubCat]"
-                     @click="selectAnIssue(issue)">
-                    {{issue}}
-                </div>
-            </div>
-
+            </transition>
 
         </div>
     </div>
