add multiple departments

--- a/options.html
+++ b/options.html
@@ -14,6 +14,10 @@
         <option value="replyToCaptain">Reply To Captain</option>
         <option value="publicReply">Public Reply</option>
     </select>
+    <select name="department" id="department">
+        <option value="captainSupport">Captain Support</option>
+        <option value="quality">Quality</option>
+    </select>
     <input type="submit" value="Save">
     <script src="options.js"></script>
 </body>
