--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
     <div id="app">
         <div class="container">
             <div class="col-xs-12 category"
-                 v-for="(subcats, cat) in categories"
+                 v-for="(subcats, cat) in categories[department]"
                  v-if="showCategories"
                  @click="showSubCatMethod(cat)">
                 {{cat.replace(/_/g, " ")[0].toUpperCase() + cat.replace(/_/g, " ").slice(1)}}
@@ -19,7 +19,7 @@
 
             <div class="container" v-if="showSubCategory">
                 <div class="col-xs-12 category"
-                     v-for="(issues , sub) in categories[selectedCat]"
+                     v-for="(issues , sub) in categories[department][selectedCat]"
                      @click="showIssuesMethod(sub)">
                     {{sub.replace(/_/g, " ")[0].toUpperCase() + sub.replace(/_/g, " ").slice(1)}}
                 </div>
@@ -27,7 +27,7 @@
 
             <div class="container" v-if="showIssues">
                 <div class="col-xs-12 category"
-                     v-for="issue in categories[selectedCat][selectedSubCat]"
+                     v-for="issue in categories[department][selectedCat][selectedSubCat]"
                      @click="selectAnIssue(issue)">
                     {{issue.replace(/_/g, " ")[0].toUpperCase() + issue.replace(/_/g, " ").slice(1)}}
                 </div>
